Fix for dark mode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,9 +92,7 @@
     margin-top: 1em;
     margin-bottom: 1em;
     padding: 0.5em;
-    background: var(--dnd5e-color-parchment);
     box-shadow: 0px 0px 5px var(--dnd5e-shadow-15);
-
 
     .filter-title {
       font-family: var(--dnd5e-font-roboto-slab);
@@ -247,4 +245,21 @@
     background: var(--dnd5e-color-gold);
     height: 30px;   
   }
+}
+
+
+/* Theme specific requirements */
+.dnd5e-theme-dark {
+
+  .dcm.selector .filter {
+    background: var(--dnd5e-background-card);
+  }
+
+  .operation-dialog li {
+      color: var(--color-text-light-1);
+  }
+}
+
+.dnd5e-theme-light .dcm.selector .filter {
+  background: var(--dnd5e-color-parchment);
 }
